--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <svg viewbox="0 0 1200 800">
     <g id="castle" stroke="none">
       <g id="ground">
-        <path d="M820 540 L600 680 L360 565 L600 430Z" fill="#339933"/>
+        <path d="M820 540 L600 680 L360 565 L600 430Z" fill="#7FB174"/>
          <path d="M600 680 L600 720 L820 580 L820 540Z" fill="#d69b61"/>
           <path d="M360 565 L360 605 L600 720 L600 680Z" fill="#deb083"/>
               </g>
@@ -78,10 +78,10 @@
         <path d="M530 220 L600 240 L675 210 L600 190 Z" fill="#207F7B" />
       </g>
       <g id="10thfloor">
-        <path d="M600 227 L620 180 L655 205 Z" fill="#EAECEB" />
-        <path d="M600 227 L620 180 L570 170 L550 212 Z" fill="#207F7B" />
+        <path d="M600 227 L580 180 L547 212 Z" fill="#EAECEB" />
+        <path d="M600 227 L580 180 L635 165 L655 205 Z" fill="#207F7B" />
         <g id="window">
-          <path d="M617 216 L630 210 L630 200 L617 206 Z" fill="#747474" />
+          <path d="M570 212 L580 215 L580 204 L570 201 Z" fill="#747474" />
         </g>
       </g>
 
@@ -181,8 +181,8 @@
           <path d="M659 362 L662 345 L664 355 Z" fill="#F4C91A" />
           <path d="M542 295 L544 285 L546 299 Z" fill="#F4C91A" />
           <path d="M642 272 L645 255 L647 265 Z" fill="#F4C91A" />
-          <path d="M618 186 L620 170 L622 180 Z" fill="#F4C91A" />
-          <path d="M568 175 L570 160 L572 170 Z" fill="#F4C91A" />
+          <path d="M629 166 L634 155 L638 170 Z" fill="#F4C91A" />
+          <path d="M573 186 L580 170 L582 180 Z" fill="#F4C91A" />
         </g>
       </g>
        <g id="tree1">
@@ -192,13 +192,13 @@
          <path d="M438 535  L429 550 L429 545 L435 535Z" fill="#CD851F"/>
          <path d="M440 536  L429 556 L429 550 L438 535Z" fill="#996600"/>
          <!--ใบใหญ่-->
-          <path d="M428 540  L427 498 445 498 445 535Z" fill="#FA8072"/>
-          <path d="M402 533  L405 495 L427 498 L428 540Z" fill="#E9967A"/>
-          <path d="M405 495 L427 490 L445 498 L427 498Z" fill="#FFA07A"/>
+          <path d="M428 540  L427 498 445 498 445 535Z" fill="#D97DC5"/>
+          <path d="M402 533  L405 495 L427 498 L428 540Z" fill="#F5A0CF"/>
+          <path d="M405 495 L427 490 L445 498 L427 498Z" fill="#FAD5F8"/>
                 <!--ใบเล็ก-->
-          <path d="M450 530 L435 520 L432 532 L442 540Z" fill="#E9967A"/>
-          <path d="M446 528 L453 527 L454 538 L442 540Z" fill="#FA8072"/>
-          <path d="M453 527 L450 520 L435 520 L446 528Z" fill="#FFA07A"/>
+          <path d="M450 530 L435 520 L432 532 L442 540Z" fill="#F5A0CF"/>
+          <path d="M446 528 L453 527 L454 538 L442 540Z" fill="#D97DC5"/>
+          <path d="M453 527 L450 520 L435 520 L446 528Z" fill="#FAD5F8"/>
                 </g>
                   <g id="tree2">
                 <!--ต้น-->
@@ -207,13 +207,13 @@
            <path d="M558 605  L572 620 L572 615 L561 605Z" fill="#CD851F"/>
            <path d="M555 606 L571 624 L571 619  L558 605Z" fill="#996600"/>
                 <!--ใบใหญ่-->
-           <path d="M578 618 L577 576 L595 576 L595 613Z" fill="#FA8072"/>
-           <path d="M552 611 L555 573  L577 576 L578 618Z" fill="#E9967A"/>
-           <path d="M555 573 L577 568 L595 576 L577 576Z" fill="#FFA07A"/>
+           <path d="M578 618 L577 576 L595 576 L595 613Z" fill="#D97DC5"/>
+           <path d="M552 611 L555 573  L577 576 L578 618Z" fill="#F5A0CF"/>
+           <path d="M555 573 L577 568 L595 576 L577 576Z" fill="#FAD5F8"/>
                 <!--ใบเล็ก-->
-           <path d="M562 610 L547 600  L544 612 L554 620Z" fill="#E9967A"/>
-           <path d="M558 608 L569 607 L569 617 L554 620Z" fill="#FA8072"/>
-           <path d="M569 607 L562 600 L547 600 L558 610Z" fill="#FFA07A"/>
+           <path d="M562 610 L547 600  L544 612 L554 620Z" fill="#F5A0CF"/>
+           <path d="M558 608 L569 607 L569 617 L554 620Z" fill="#D97DC5"/>
+           <path d="M569 607 L562 600 L547 600 L558 610Z" fill="#FAD5F8"/>
                 </g>
 
             <g id="treebonsai1">
